BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Assessment__c.object
<CustomObject>
    <fields>
        <fullName>Prescibers_preferred_trtmnt_approach_BMS__c</fullName>
        <inlineHelpText>What is the prescriber&apos;s preferred treatment approach?</inlineHelpText>
        <label>Prescriber&apos;s preferred trtmnt approach?</label>
        <picklist>
            <picklistValues>
                <fullName>Sequential monotherapies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progression of mono and combo therapies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Split based on patient type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immediate use of combination therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prescribe_products_temporary_codes_BMS__c</fullName>
        <inlineHelpText>Does your office prescribe products with temporary codes?</inlineHelpText>
        <label>Prescribe products with temporary codes?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q10_Approved_Sprycel_BMS_US__c</fullName>
        <description>Based on risk, what is your recommended action for this plan</description>
        <label>Q10. Approved Sprycel</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q10_Comments_Form_Flas_US__c</fullName>
        <label>Q10. Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q10_Comments__c</fullName>
        <label>Q10. Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q10_Comments_generic__c</fullName>
        <description>Comments for Q10</description>
        <inlineHelpText>Comments for Q10</inlineHelpText>
        <label>Q10. Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q10_Eliquis_Form_Flash_BMS_US__c</fullName>
        <label>Q10. Eliquis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q10_Formulary_Flash_BMS_US__c</fullName>
        <description>Q10. Competitive Formulary Status or Medical Policy</description>
        <inlineHelpText>Please enter the competitive Formulary Status or Medical Policy</inlineHelpText>
        <label>Q10. Formulary Flash</label>
        <picklist>
            <picklistValues>
                <fullName>T1 Generic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T1 Preferred Generic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T2 Preferred Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T2 Non-preferred Generic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T3 Non-preferred Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T3 Preferred Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T4 Non-preferred brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T4 Specialty Tier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T5 Specialty Tier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Covered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-PDL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (see comments)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Medical Policy, no PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Medical Policy, PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nopolicyconsist w/labelpendP&amp;T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy consistent w/label noPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy consistent w/label, PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy more restrictive, no PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy more restrictive, PA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q10_Orencia_Profiling_BMS_US__c</fullName>
        <description>Q10 - Does the plan recognize Orencia SC as a unique MOA alternative to non anti-TNF therapy?</description>
        <inlineHelpText>Please enter whether the plan recognizes Orencia SC as a unique MOA alternative to non anti-TNF therapy?</inlineHelpText>
        <label>Q10. Orencia Profiling</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q11_Comments_generic__c</fullName>
        <description>Comments for Q11.</description>
        <inlineHelpText>Comments for Q11.</inlineHelpText>
        <label>Q11. Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q11_Formulary_Flash_BMS_US__c</fullName>
        <label>Q11. Formulary Flash</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Q11_Orencia_Profiling_BMS_US__c</fullName>
        <description>Q11. Would the plan consider creating a separate category for Orencia SC within the next year?</description>
        <inlineHelpText>Please record whether the plan would consider creating a separate category for Orencia SC within the next year?</inlineHelpText>
        <label>Q11. Orencia Profiling</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, please explain in comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q12_Comments_generic__c</fullName>
        <description>Comments for Q12.</description>
        <inlineHelpText>Comments for Q12.</inlineHelpText>
        <label>Q12. Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q12_Formulary_Flash_BMS_US__c</fullName>
        <label>Q12. Formulary Flash</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q12_Orencia_Profiling_BMS_US__c</fullName>
        <description>Q12 - Is the plan satisfied with their current RA category management?</description>
        <inlineHelpText>Please record whether the plan is satisfied with their current RA category management</inlineHelpText>
        <label>Q12. Orencia Profiling</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q15_Orencia_Profile_BMS__c</fullName>
        <description>Q15 - Is the plan receptive to contracting to add Orencia SC to a preferred tier?</description>
        <inlineHelpText>Please record whether the plan is receptive to contracting to add Orencia SC to a preferred tier?</inlineHelpText>
        <label>Q15. Orencia Profile</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q1_Approved_Sprycel_BMS_US__c</fullName>
        <description>What is the current status of Sprycel access at the plan (Tier and SE)</description>
        <label>Q1. Approved Sprycel</label>
        <picklist>
            <picklistValues>
                <fullName>Parity to Gleevec or Tasigna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gleevec parity, Tasigna higher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher than Gleevec or Tasigna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE through Gleevec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE through Gleevec and Tasigna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other, please comment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q1_Comments__c</fullName>
        <description>Comments for Q1. What is your institution’s protocol for 1st line treatment of mCRC?</description>
        <inlineHelpText>Comments for Q1. What is your institution’s protocol for 1st line treatment of mCRC?</inlineHelpText>
        <label>Q1. Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q1_Eliquis_Assess_BMS_US__c</fullName>
        <description>Q1 - When will the P&amp;T Committee of this customer most likely review Eliquis?</description>
        <inlineHelpText>Please enter when the P&amp;T Committee of this customer will most likely review Eliquis</inlineHelpText>
        <label>Q1. Eliquis Assess</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Q1_Eliquis_BMS_US__c</fullName>
        <label>Q1. Eliquis</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q2_Approved_Sprycel_BMS_US__c</fullName>
        <description>Is there competitive activity(contracts,partnerships)in CML or other relevant analogs (eg RCC)</description>
        <label>Q2. Approved Sprycel</label>
        <picklist>
            <picklistValues>
                <fullName>No evidence for Specialty TA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Specialty TA (e.g. RCC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evidence in CML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not sure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other, please comment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q2_Comments__c</fullName>
        <description>Comments for Q2. Is there a protocol for biomarker testing in patients with mCRC at your institution? If not, is there a prevailing practice as to when it occurs?</description>
        <inlineHelpText>Comments for Q2. Is there a protocol for biomarker testing in patients with mCRC at your institution? If not, is there a prevailing practice as to when it occurs?</inlineHelpText>
        <label>Q2. Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q2_Eliquis_Assess_BMS_US__c</fullName>
        <description>Q2 - What is the typical timeframe for gaining official formulary status after P&amp;T at this customer?</description>
        <inlineHelpText>Please enter the typical timeframe for gaining official formulary status after P&amp;T at this customer?</inlineHelpText>
        <label>Q2. Eliquis Assess</label>
        <picklist>
            <picklistValues>
                <fullName>Immediate formulary change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>61-90 days post-P&amp;T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within 30 days of P&amp;T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31-60 days post-P&amp;T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsure/Don&apos;t Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 90 days post-P&amp;T</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q2_Eliquis_BMS_US__c</fullName>
        <description>Geographic Area impacted if applicable</description>
        <label>Q2. Eliquis</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q3_Eliquis_Assess_BMS_US__c</fullName>
        <description>Q3 - What will likely be the default access for Eliquis at this customer prior to the P&amp;T review?</description>
        <inlineHelpText>Please enter what will likely be the default access for Eliquis at this customer prior to the P&amp;T review</inlineHelpText>
        <label>Q3. Eliquis Assess</label>
        <picklist>
            <picklistValues>
                <fullName>T2 Preferred Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T2 Non-Preferred Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T3 Preferred Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T3 Non-Preferred Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T4 Preferred Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T4 Non-Preferred Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Covered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Covered- Avail. by Appeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsure/Don&apos;t Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q3_Eliquis_BMS_US__c</fullName>
        <description>Number of Lives Impacted</description>
        <label>Q3. Eliquis</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q6_Eliquis_Form_Flash_BMS_US__c</fullName>
        <label>Q6. Eliquis</label>
        <picklist>
            <picklistValues>
                <fullName>T2 Preferred Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T3 Preferred Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T3 Non-Preferred Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T4 Non-Preferred Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Covered - Avail. by Appeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Covered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsure/Don&apos;t Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On prescritpion drug list (PDL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-prescription drug list(non-PDL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-prescription drug list (PDL)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q7_Eliquis_Form_Flash_BMS_US__c</fullName>
        <label>Q7. Eliquis</label>
        <picklist>
            <picklistValues>
                <fullName>Unrestricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prior Authorization (PA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quantity Limit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA plus Step Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsure/Don&apos;t Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Q8_Approved_Sprycel__c</fullName>
        <description>If yes, what indicator would drive the risk assessment change</description>
        <label>Q8. Approved Sprycel</label>
        <picklist>
            <picklistValues>
                <fullName>Evidence of issue in CML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evidence of issue in other TAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No change in account risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other, please comment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q_Any_reason_tests_not_ordered_in_time__c</fullName>
        <description>Q. Are you aware of any reasons biomarker tests are not ordered in time to make a decision for 1st line treatment of mCRC?</description>
        <inlineHelpText>Q. Are you aware of any reasons biomarker tests are not ordered in time to make a decision for 1st line treatment of mCRC?</inlineHelpText>
        <label>Q. Any reason tests not ordered in time?</label>
        <picklist>
            <picklistValues>
                <fullName>Anti-EGFR not used 1st-line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Takes too long for test results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not part of protocol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q_Biomarker_Testing_for_mCRC__c</fullName>
        <description>Q. Is there a protocol for biomarker testing in patients with mCRC at your institution? If not, is there a prevailing practice as to when it occurs?</description>
        <inlineHelpText>Q. Is there a protocol for biomarker testing in patients with mCRC at your institution? If not, is there a prevailing practice as to when it occurs?</inlineHelpText>
        <label>Q. Biomarker Testing for mCRC Patients?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No protocol, and biomarker testing varies widely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No protocol, but biomarker testing is fairly consistent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q_Educational_and_training_background__c</fullName>
        <description>Q. What is your educational and training background?</description>
        <inlineHelpText>Q. What is your educational and training background?</inlineHelpText>
        <label>Q. Educational and training background?</label>
        <picklist>
            <picklistValues>
                <fullName>PharmD, with specialty oncology training or BCOP designation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PharmD, with no specialty oncology training or BCOP designation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RPh, with specialty oncology training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RPh</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q_Educational_needs_for_biomarkers__c</fullName>
        <description>Q. What are your educational needs regarding biomarkers in mCRC?</description>
        <inlineHelpText>Q. What are your educational needs regarding biomarkers in mCRC?</inlineHelpText>
        <label>Q. Educational needs for biomarkers?</label>
        <picklist>
            <picklistValues>
                <fullName>Clinical validity of biomarkers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>How to set up biomarker protocols</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing methods &amp; differences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Q_Info_used_to_interpret_results__c</fullName>
        <description>Q. What information is relied upon for interpreting the clinical validity/usefulness of biomarker tests?</description>
        <inlineHelpText>Q. What information is relied upon for interpreting the clinical validity/usefulness of biomarker tests?</inlineHelpText>
        <label>Q. Info used to interpret results?</label>
        <picklist>
            <picklistValues>
                <fullName>Review articles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Own analysis of literature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interpretation given by test co.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discussion with tumor board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formulary or other committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidelines, e.g. NCCN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Q_Interaction_with_management_team__c</fullName>
        <description>Q. How often do you interact with other members of the patient management team?</description>
        <inlineHelpText>Q. How often do you interact with other members of the patient management team?</inlineHelpText>
        <label>Q. Interaction with management team?</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Q_Involvement_in_patient_management__c</fullName>
        <description>Q. How are you involved in the management of patients with mCRC at your institution?</description>
        <inlineHelpText>Q. How are you involved in the management of patients with mCRC at your institution?</inlineHelpText>
        <label>Q. Involvement in patient management?</label>
        <picklist>
            <picklistValues>
                <fullName>Formulary decision maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment recommendation/selection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Q_Preferred_method_of_learning__c</fullName>
        <description>Q. What is your preferred method of learning (self-study, CME dinner program, etc.)?</description>
        <inlineHelpText>Q. What is your preferred method of learning (self-study, CME dinner program, etc.)?</inlineHelpText>
        <label>Q. Preferred method of learning?</label>
        <picklist>
            <picklistValues>
                <fullName>Scientific journals (e.g., JAMA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IME/CME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pathologist-specific journals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual congresses/meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Q_Protocol_for_1st_line_treat_of_mCRC__c</fullName>
        <description>Q. What is your institution’s protocol for 1st line treatment of mCRC?</description>
        <inlineHelpText>Q. What is your institution’s protocol for 1st line treatment of mCRC?</inlineHelpText>
        <label>Q. Protocol for 1st line treat. of mCRC?</label>
        <picklist>
            <picklistValues>
                <fullName>FOLFOX alone.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOLFOX + bevacizumab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CapeOx +/- bevacizumab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOLFOX + panitumumab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOLFIRI alone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOLFIRI + cetuximab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Q_Role_in_development_of_testing__c</fullName>
        <description>Q. What was your role, if any, in the development of the biomarker testing protocol for mCRC at your institution?</description>
        <inlineHelpText>Q. What was your role, if any, in the development of the biomarker testing protocol for mCRC at your institution?</inlineHelpText>
        <label>Q. Role in development of testing?</label>
        <picklist>
            <picklistValues>
                <fullName>Key decision maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory role/provided data but not a decision maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No role</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q_Tests_ordered_received_in_time__c</fullName>
        <description>Q. Are biomarker tests ordered and received in time to make decisions for 1st line treatment of mCRC?</description>
        <inlineHelpText>Q. Are biomarker tests ordered and received in time to make decisions for 1st line treatment of mCRC?</inlineHelpText>
        <label>Q. Tests ordered &amp; received in time?</label>
        <picklist>
            <picklistValues>
                <fullName>Always</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sometimes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q_Wen_are_biomarket_test_incorporated__c</fullName>
        <description>Q. When are biomarker tests usually incorporated in mCRC patients at your institution?</description>
        <inlineHelpText>Q. When are biomarker tests usually incorporated in mCRC patients at your institution?</inlineHelpText>
        <label>Q.When are biomarket tests incorporated?</label>
        <picklist>
            <picklistValues>
                <fullName>Before first-line therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>During first-line therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After failure of first-line therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only before giving an anti-EGFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rarely</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Q_What_was_your_role_in_development__c</fullName>
        <description>Q. What was your role, if any, in the development of the treatment protocol for 1st line mCRC?</description>
        <inlineHelpText>Q. What was your role, if any, in the development of the treatment protocol for 1st line mCRC?</inlineHelpText>
        <label>Q. What was your role in development?</label>
        <picklist>
            <picklistValues>
                <fullName>Key decision maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory role, not a decision maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No role</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q_Where_do_you_go_for_information__c</fullName>
        <description>Q. Where do you go for information?  What information sources do you consider reliable?</description>
        <inlineHelpText>Q. Where do you go for information?  What information sources do you consider reliable?</inlineHelpText>
        <label>Q. Where do you go for information?</label>
        <picklist>
            <picklistValues>
                <fullName>Scientific journals (e.g. JAMA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IME/CME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacist-specific journals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual congresses/meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Q_Which_biomarker_tests_are_ordered__c</fullName>
        <description>Q. Which biomarker tests are ordered for patients with mCRC at your institution?</description>
        <inlineHelpText>Q. Which biomarker tests are ordered for patients with mCRC at your institution?</inlineHelpText>
        <label>Q. Which biomarker tests are ordered?</label>
        <picklist>
            <picklistValues>
                <fullName>KRAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PI3K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERCC1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphiregulin/epiregulin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>